# tact

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml
man/: tact.1
src/: app.rs  config.rs  fs.rs  main.rs  ui.rs
