[package]
name = "tact"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
